[gd_scene load_steps=13 format=3 uid="uid://dri03y6aouw2d"]

[ext_resource type="Theme" uid="uid://cwiv3vfpux3da" path="res://Scenes/ui/game_ui__theme.tres" id="1_2ih3r"]
[ext_resource type="Script" path="res://Scenes/ui/tools_panel.gd" id="2_pfq6w"]
[ext_resource type="Texture2D" uid="uid://vonvqnipfkek" path="res://Game elements Assets/Objects/Basic_tools_and_meterials.png" id="2_y723o"]
[ext_resource type="Texture2D" uid="uid://b57qegy1y286s" path="res://Game elements Assets/Objects/Basic_Plants.png" id="3_1lsby"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ymekw"]
atlas = ExtResource("2_y723o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y1esr"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-673371b1802b23817ec96d99dc883467.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2p0sf"]
atlas = SubResource("CompressedTexture2D_y1esr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp5kl"]
atlas = ExtResource("3_1lsby")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8pjj6"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-673371b1802b23817ec96d99dc883467.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_5byr7"]
atlas = SubResource("CompressedTexture2D_8pjj6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jmio1"]
load_path = "res://.godot/imported/Basic_tools_and_meterials.png-673371b1802b23817ec96d99dc883467.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_girl7"]
atlas = SubResource("CompressedTexture2D_jmio1")
region = Rect2(32, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 168.0
offset_bottom = 48.0
scale = Vector2(2, 2)
theme = ExtResource("1_2ih3r")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_pfq6w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ymekw")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_2p0sf")
icon_alignment = 1

[node name="ToolSeeds" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_lp5kl")
icon_alignment = 1

[node name="ToolWateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_5byr7")
icon_alignment = 1

[node name="ToolBuild" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_girl7")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
